--- a/BlazorAdminpanel.csproj
+++ b/BlazorAdminpanel.csproj
@@ -10,6 +10,7 @@
 		<!-- Server -->
 		<PackageReference Include="Azure.Identity" Version="1.11.2" />
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+		<PackageReference Include="LocalStorage" Version="2.1.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.2.0" />
